Add selection of elements
The current element now points to the selected element in the elements
list. All modifications will be done on the selected element. The
selection can be changed with the "select" cursor mode.